# com.unity.webrtc

.yamato/: upm-ci-webrtc-packages.yml
BuildScripts~/: build_plugin.cmd  build_plugin.sh  build_plugin_linux.sh
Plugin~/: CMakeLists.txt
Plugin~/NvCodec/: CMakeLists.txt
Plugin~/NvCodec/NvCodec/NvDecoder/: NvDecoder.cpp
Plugin~/NvCodec/NvDecoder/: NvDecoder.h
Plugin~/NvCodec/NvEncoder/: NvEncoderD3D11.h
Plugin~/WebRTCPlugin/: CMakeLists.txt  Context.cpp  Context.h  DummyVideoEncoder.cpp  Logger.cpp  NvVideoCapturer.cpp  NvVideoCapturer.h  PeerConnectionObject.cpp  PlatformBase.h  UnityLogStream.cpp  UnityLogStream.h  UnityRenderEvent.cpp  UnityRenderEvent.h  UnityVideoEncoderFactory.cpp  UnityVideoTrackSource.cpp  UnityVideoTrackSource.h  WebRTCPlugin.cpp  pch.h
Plugin~/WebRTCPlugin/Codec/: CMakeLists.txt  EncoderFactory.cpp  EncoderFactory.h  IEncoder.h
Plugin~/WebRTCPlugin/Codec/NvCodec/: NvEncoderCudaUtil.cpp  NvEncoderCudaUtil.h  NvEncoderCudaWithCUarray.cpp  NvEncoderCudaWithCUarray.h  NvEncoderD3D12.cpp  NvEncoderD3D12.h  NvEncoderProxy.cpp  NvEncoderProxy.h  Util.cpp  Util.h
Plugin~/WebRTCPlugin/Codec/SoftwareCodec/: SoftwareEncoder.cpp  SoftwareEncoder.h
Plugin~/WebRTCPlugin/GraphicsDevice/: CMakeLists.txt  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsUtility.h  IGraphicsDevice.h
Plugin~/WebRTCPlugin/GraphicsDevice/Cuda/: CudaContext.h  ICudaDevice.h
Plugin~/WebRTCPlugin/GraphicsDevice/D3D11/: D3D11GraphicsDevice.cpp  D3D11GraphicsDevice.h
Plugin~/WebRTCPlugin/GraphicsDevice/D3D12/: D3D12GraphicsDevice.cpp  D3D12GraphicsDevice.h  D3D12Texture2D.cpp  D3D12Texture2D.h
Plugin~/WebRTCPlugin/GraphicsDevice/Metal/: MetalGraphicsDevice.h  MetalGraphicsDevice.mm
Plugin~/WebRTCPlugin/GraphicsDevice/OpenGL/: OpenGLCudaGraphicsDevice.cpp  OpenGLCudaGraphicsDevice.h  OpenGLCudaTexture2D.cpp  OpenGLCudaTexture2D.h  OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h
Plugin~/WebRTCPlugin/GraphicsDevice/Vulkan/: VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  VulkanTexture2D.cpp  VulkanTexture2D.h
Plugin~/WebRTCPlugin/GraphicsDevice/Vulkan/Cuda/: CudaContext.cpp  CudaContext.h  CudaImage.cpp  CudaImage.h
Plugin~/WebRTCPluginTest/: CMakeLists.txt  ContextTest.cpp  GraphicsDeviceTest.cpp  GraphicsDeviceTestBase.cpp  GraphicsDeviceTestBase.h  VideoCapturerTest.cpp  VideoRendererTest.cpp  VideoTrackSourceTest.cpp
Plugin~/WebRTCPluginTest/NvCodec/: NvEncoderTest.cpp  UtilTest.cpp
Runtime/Scripts/: AudioStreamTrack.cs  Context.cs  MediaStream.cs  MediaStreamTrack.cs  RTCIceCandidate.cs  RTCPeerConnection.cs  VideoStreamTrack.cs  WebGLPlugin.cs  WebRTC.cs
Samples~/Audio/: AudioSample.cs
Samples~/Bandwidth/: BandwidthSample.cs
Samples~/ChangeCodecs/: ChangeCodecsSample.cs
Samples~/DataChannel/: DataChannelSample.cs
Samples~/MediaStream/: MediaStreamSample.cs
Samples~/Menu/: Menu.unity  TestWebCam.cs  TestWebCam.unity
Samples~/MultiAudioReceive/: MultiAudioReceiveSample.cs
Samples~/MultiVideoReceive/: MultiVideoReceiveSample.cs
Samples~/MultiplePeerConnections/: MultiplePeerConnectionsSample.cs
Samples~/MungeSDP/: MungeSDPSample.cs
Samples~/PeerConnection/: PeerConnectionSample.cs
Samples~/PerfectNegotiation/: PerfectNegotiationSample.cs
Samples~/Scripts/: SceneSelectUI.cs
Samples~/Stats/: StatsSample.cs
Samples~/TrickleIce/: TrickleIceSample.cs
Samples~/VideoReceive/: VideoReceiveSample.cs
Samples~/VideoSendReceive/: VideoSendReceive.unity  VideoSendReceiveSample.cs
Tests/Runtime/: AudioStreamTrackTest.cs  ContextTest.cs  DataChannelTest.cs  IceCandidateTest.cs  MediaStreamTest.cs  MediaStreamTrackTest.cs  NativeAPITest.cs  PeerConnectionTest.cs  TransceiverTest.cs  VideoReceiveTest.cs  WebRTCTest.cs
